# easy-ai

./: .gitignore  .gitmodules  CLAUDE.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_query_indexes.py  0003_long_session.py  0004_llm_model_max_input_tokens.py  0005_tool_governance.py  0006_drop_enable_long_session.py  0007_drop_tool_fingerprint.py  0008_tool_hitl_timeout.py  0009_memory_kv.py  0010_category.py  0011_knowledge.py  0012_system_setting.py  0013_kb_doc_progress.py  0014_kb_category.py  0015_sandbox_image.py  0016_builtin_tool_governance.py  0017_computer_use_governance.py  0018_seed_sandbox_image.py  0019_integration.py  0020_api_access_log.py  0021_alert_rule.py  0022_seed_alert_rule.py  0023_app_metric_minute.py  0024_knowledge_v2.py  0025_drop_tb_kb_legacy_columns.py  0025_skill_emoji.py  0026_skill_file.py
backend/app/: .env.example  main.py  run.py
backend/app/api/: alert_record_api.py  alert_rule_api.py  app_api.py  app_category_api.py  auth_api.py  conversation_api.py  flowise_proxy.py  integration_api.py  kb_api.py  kb_category_api.py  kb_document_api.py  kb_retrieve_api.py  llm_api.py  memory_api.py  observability_api.py  open_api.py  permission_api.py  policy_api.py  rag_dataset_api.py  role_api.py  router.py  sandbox_image_api.py  sandbox_instance_api.py  sandbox_view_api.py  skill_api.py  skill_market_api.py  sync_log_api.py  system_setting_api.py  tool_api.py  user_api.py  user_group_api.py
backend/app/app/: __init__.py  agent_app.py  alert_rule_worker.py  app_runtime.py  backend_factory.py  checkpoint_purger.py  checkpointer_factory.py  computer_tools.py  hitl_timeout_worker.py  (+10 more)
backend/scripts/: kb_e2e_smoke.py  migrate_knowledge_v2.py  rag_test_doc.md
backend/tests/: test_memory.py  test_stream_events.py
(+238 files in other folders)
