[project]
name = "easy-ai-backend"
version = "0.1.0"
description = "easy-ai backend service"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "python-jose[cryptography]",
  "bcrypt>=4.0",
]

[dependency-groups]
dev = [
  "black",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.ignore = ["RUF001", "RUF002", "RUF003"]

[tool.black]
line-length = 100
target-version = ["py312"]
